# EchoOwnTools

./: .gitignore  CMakeLists.txt  EchoOwnTools.cpp  EchoOwnTools.h  EchoOwnTools.qrc  EchoOwnTools.sln  EchoOwnTools.ui  EchoOwnTools.vcxproj  EchoOwnTools.vcxproj.filters  README.md  lazysingleton.h  main.cpp  main_color.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
TemplateMatch/TemplateMatch/: TemplateMatch.vcxproj  TemplateMatch.vcxproj.filters  fusion.h  line2d.cpp  line2d.h
include/: lazysingleton.h
src/: lazysingleton.cpp
